--- a/update_profile.html
+++ b/update_profile.html
@@ -19,7 +19,7 @@
         <input type="text" class="content__lastName" placeholder="Last Name"><br>
         <input type="text" class="content__email" placeholder="Email"><br>
        
-        <input type="submit" value="Update Profile" class="content__btn">
+        <input type="submit" value="Update Profile" class="btn">
 
         
       </div>
